"build": "rm -rf dist && webpack" =>  "build": "webpack"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "12.04.2021-25.04.2021     26.04.2021-09.05.2021      10.05.2021-23.05.2021     24.05.2021-06.06.2021",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack",
+    "build": "webpack",
     "dev": "webpack serve"
   },
   "repository": {
